lab-3/program/gen/ConfRoomSchedulerParser.py
# Generated from ConfRoomScheduler.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class ConfRoomSchedulerParser ( Parser ):

    grammarFileName = "ConfRoomScheduler.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'RESERVAR'", "'PARA'", "'DE'", "'A'", 
                     "'POR'", "'CANCELAR'", "'LISTAR RESERVACIONES'", "'REPROGRAMAR'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "STRING", "NAME", "DATE", "TIME", "ID", 
                      "NEWLINE", "WS" ]

    RULE_prog = 0
    RULE_stat = 1
    RULE_reserve = 2
    RULE_cancel = 3
    RULE_toList = 4
    RULE_reschedule = 5
    RULE_description = 6

    ruleNames =  [ "prog", "stat", "reserve", "cancel", "toList", "reschedule", 
                   "description" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    STRING=9
    NAME=10
    DATE=11
    TIME=12
    ID=13
    NEWLINE=14
    WS=15

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stat(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ConfRoomSchedulerParser.StatContext)
            else:
                return self.getTypedRuleContext(ConfRoomSchedulerParser.StatContext,i)


        def getRuleIndex(self):
            return ConfRoomSchedulerParser.RULE_prog

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProg" ):
                listener.enterProg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProg" ):
                listener.exitProg(self)




    def prog(self):

        localctx = ConfRoomSchedulerParser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_prog)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 15 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 14
                self.stat()
                self.state = 17 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 16834) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return ConfRoomSchedulerParser.RULE_stat

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class BlankContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ConfRoomSchedulerParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def NEWLINE(self):
            return self.getToken(ConfRoomSchedulerParser.NEWLINE, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlank" ):
                listener.enterBlank(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlank" ):
                listener.exitBlank(self)


    class RescheduleStatContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ConfRoomSchedulerParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def reschedule(self):
            return self.getTypedRuleContext(ConfRoomSchedulerParser.RescheduleContext,0)

        def NEWLINE(self):
            return self.getToken(ConfRoomSchedulerParser.NEWLINE, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRescheduleStat" ):
                listener.enterRescheduleStat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRescheduleStat" ):
                listener.exitRescheduleStat(self)


    class ReserveStatContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ConfRoomSchedulerParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def reserve(self):
            return self.getTypedRuleContext(ConfRoomSchedulerParser.ReserveContext,0)

        def NEWLINE(self):
            return self.getToken(ConfRoomSchedulerParser.NEWLINE, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReserveStat" ):
                listener.enterReserveStat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReserveStat" ):
                listener.exitReserveStat(self)


    class CancelStatContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ConfRoomSchedulerParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def cancel(self):
            return self.getTypedRuleContext(ConfRoomSchedulerParser.CancelContext,0)

        def NEWLINE(self):
            return self.getToken(ConfRoomSchedulerParser.NEWLINE, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCancelStat" ):
                listener.enterCancelStat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCancelStat" ):
                listener.exitCancelStat(self)


    class ToListStatContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ConfRoomSchedulerParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def toList(self):
            return self.getTypedRuleContext(ConfRoomSchedulerParser.ToListContext,0)

        def NEWLINE(self):
            return self.getToken(ConfRoomSchedulerParser.NEWLINE, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterToListStat" ):
                listener.enterToListStat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitToListStat" ):
                listener.exitToListStat(self)



    def stat(self):

        localctx = ConfRoomSchedulerParser.StatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_stat)
        try:
            self.state = 32
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1]:
                localctx = ConfRoomSchedulerParser.ReserveStatContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 19
                self.reserve()
                self.state = 20
                self.match(ConfRoomSchedulerParser.NEWLINE)
                pass
            elif token in [6]:
                localctx = ConfRoomSchedulerParser.CancelStatContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 22
                self.cancel()
                self.state = 23
                self.match(ConfRoomSchedulerParser.NEWLINE)
                pass
            elif token in [7]:
                localctx = ConfRoomSchedulerParser.ToListStatContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 25
                self.toList()
                self.state = 26
                self.match(ConfRoomSchedulerParser.NEWLINE)
                pass
            elif token in [8]:
                localctx = ConfRoomSchedulerParser.RescheduleStatContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 28
                self.reschedule()
                self.state = 29
                self.match(ConfRoomSchedulerParser.NEWLINE)
                pass
            elif token in [14]:
                localctx = ConfRoomSchedulerParser.BlankContext(self, localctx)
                self.enterOuterAlt(localctx, 5)
                self.state = 31
                self.match(ConfRoomSchedulerParser.NEWLINE)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ReserveContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(ConfRoomSchedulerParser.ID, 0)

        def DATE(self):
            return self.getToken(ConfRoomSchedulerParser.DATE, 0)

        def TIME(self, i:int=None):
            if i is None:
                return self.getTokens(ConfRoomSchedulerParser.TIME)
            else:
                return self.getToken(ConfRoomSchedulerParser.TIME, i)

        def NAME(self):
            return self.getToken(ConfRoomSchedulerParser.NAME, 0)

        def description(self):
            return self.getTypedRuleContext(ConfRoomSchedulerParser.DescriptionContext,0)


        def getRuleIndex(self):
            return ConfRoomSchedulerParser.RULE_reserve

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReserve" ):
                listener.enterReserve(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReserve" ):
                listener.exitReserve(self)




    def reserve(self):

        localctx = ConfRoomSchedulerParser.ReserveContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_reserve)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 34
            self.match(ConfRoomSchedulerParser.T__0)
            self.state = 35
            self.match(ConfRoomSchedulerParser.ID)
            self.state = 36
            self.match(ConfRoomSchedulerParser.T__1)
            self.state = 37
            self.match(ConfRoomSchedulerParser.DATE)
            self.state = 38
            self.match(ConfRoomSchedulerParser.T__2)
            self.state = 39
            self.match(ConfRoomSchedulerParser.TIME)
            self.state = 40
            self.match(ConfRoomSchedulerParser.T__3)
            self.state = 41
            self.match(ConfRoomSchedulerParser.TIME)
            self.state = 42
            self.match(ConfRoomSchedulerParser.T__4)
            self.state = 43
            self.match(ConfRoomSchedulerParser.NAME)
            self.state = 45
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==9:
                self.state = 44
                self.description()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CancelContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(ConfRoomSchedulerParser.ID, 0)

        def DATE(self):
            return self.getToken(ConfRoomSchedulerParser.DATE, 0)

        def TIME(self, i:int=None):
            if i is None:
                return self.getTokens(ConfRoomSchedulerParser.TIME)
            else:
                return self.getToken(ConfRoomSchedulerParser.TIME, i)

        def NAME(self):
            return self.getToken(ConfRoomSchedulerParser.NAME, 0)

        def getRuleIndex(self):
            return ConfRoomSchedulerParser.RULE_cancel

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCancel" ):
                listener.enterCancel(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCancel" ):
                listener.exitCancel(self)




    def cancel(self):

        localctx = ConfRoomSchedulerParser.CancelContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_cancel)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 47
            self.match(ConfRoomSchedulerParser.T__5)
            self.state = 48
            self.match(ConfRoomSchedulerParser.ID)
            self.state = 49
            self.match(ConfRoomSchedulerParser.T__1)
            self.state = 50
            self.match(ConfRoomSchedulerParser.DATE)
            self.state = 51
            self.match(ConfRoomSchedulerParser.T__2)
            self.state = 52
            self.match(ConfRoomSchedulerParser.TIME)
            self.state = 53
            self.match(ConfRoomSchedulerParser.T__3)
            self.state = 54
            self.match(ConfRoomSchedulerParser.TIME)
            self.state = 55
            self.match(ConfRoomSchedulerParser.T__4)
            self.state = 56
            self.match(ConfRoomSchedulerParser.NAME)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ToListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return ConfRoomSchedulerParser.RULE_toList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterToList" ):
                listener.enterToList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitToList" ):
                listener.exitToList(self)




    def toList(self):

        localctx = ConfRoomSchedulerParser.ToListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_toList)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 58
            self.match(ConfRoomSchedulerParser.T__6)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RescheduleContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(ConfRoomSchedulerParser.ID, 0)

        def DATE(self, i:int=None):
            if i is None:
                return self.getTokens(ConfRoomSchedulerParser.DATE)
            else:
                return self.getToken(ConfRoomSchedulerParser.DATE, i)

        def TIME(self, i:int=None):
            if i is None:
                return self.getTokens(ConfRoomSchedulerParser.TIME)
            else:
                return self.getToken(ConfRoomSchedulerParser.TIME, i)

        def NAME(self):
            return self.getToken(ConfRoomSchedulerParser.NAME, 0)

        def description(self):
            return self.getTypedRuleContext(ConfRoomSchedulerParser.DescriptionContext,0)


        def getRuleIndex(self):
            return ConfRoomSchedulerParser.RULE_reschedule

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReschedule" ):
                listener.enterReschedule(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReschedule" ):
                listener.exitReschedule(self)




    def reschedule(self):

        localctx = ConfRoomSchedulerParser.RescheduleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_reschedule)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 60
            self.match(ConfRoomSchedulerParser.T__7)
            self.state = 61
            self.match(ConfRoomSchedulerParser.ID)
            self.state = 62
            self.match(ConfRoomSchedulerParser.DATE)
            self.state = 63
            self.match(ConfRoomSchedulerParser.TIME)
            self.state = 64
            self.match(ConfRoomSchedulerParser.T__3)
            self.state = 65
            self.match(ConfRoomSchedulerParser.TIME)
            self.state = 66
            self.match(ConfRoomSchedulerParser.T__4)
            self.state = 67
            self.match(ConfRoomSchedulerParser.NAME)
            self.state = 68
            self.match(ConfRoomSchedulerParser.T__1)
            self.state = 69
            self.match(ConfRoomSchedulerParser.DATE)
            self.state = 70
            self.match(ConfRoomSchedulerParser.T__2)
            self.state = 71
            self.match(ConfRoomSchedulerParser.TIME)
            self.state = 72
            self.match(ConfRoomSchedulerParser.T__3)
            self.state = 73
            self.match(ConfRoomSchedulerParser.TIME)
            self.state = 75
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==9:
                self.state = 74
                self.description()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DescriptionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self):
            return self.getToken(ConfRoomSchedulerParser.STRING, 0)

        def getRuleIndex(self):
            return ConfRoomSchedulerParser.RULE_description

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDescription" ):
                listener.enterDescription(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDescription" ):
                listener.exitDescription(self)




    def description(self):

        localctx = ConfRoomSchedulerParser.DescriptionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_description)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 77
            self.match(ConfRoomSchedulerParser.STRING)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





